tests/snapshots/test_from_file__oss_tests__lol.snap
---
source: tests/test_from_file.rs
expression: result
---
constraints:
  "c1:":
    Standard:
      name: "c1:"
      coefficients:
        - coefficient: 3
          var_name: x1
        - coefficient: 1
          var_name: x2
        - coefficient: 2
          var_name: x3
      sense: "="
      rhs: 30
  "c2:":
    Standard:
      name: "c2:"
      coefficients:
        - coefficient: 2
          var_name: x1
        - coefficient: 1
          var_name: x2
        - coefficient: 3
          var_name: x3
        - coefficient: 1
          var_name: x4
      sense: ">="
      rhs: 15
  "c3:":
    Standard:
      name: "c3:"
      coefficients:
        - coefficient: 2
          var_name: x2
        - coefficient: 3
          var_name: x4
      sense: "<="
      rhs: 25
objectives:
  - coefficients:
      - coefficient: 3
        var_name: x1
      - coefficient: 1
        var_name: x2
      - coefficient: 5
        var_name: x3
      - coefficient: 1
        var_name: x4
    name: obj
problem_name: ~
problem_sense: Maximize
variables:
  x1:
    Bounded:
      - 0
      - inf
      - false
  x2:
    Bounded:
      - 0
      - 10
      - false
  x3:
    Bounded:
      - 0
      - inf
      - false
  x4:
    Bounded:
      - 0
      - inf
      - false
