tests/snapshots/test_from_file__oss_tests__milo1.snap
---
source: tests/test_from_file.rs
expression: result
---
problem_name: ~
problem_sense: Maximize
variables:
  x1: General
  x2: General
objectives:
  - name: obj
    coefficients:
      - var_name: x1
        coefficient: 1
      - var_name: x2
        coefficient: 0.64
constraints:
  "c1:":
    Standard:
      name: "c1:"
      coefficients:
        - var_name: x1
          coefficient: 50
        - var_name: x2
          coefficient: 31
      sense: "<="
      rhs: 250
  "c2:":
    Standard:
      name: "c2:"
      coefficients:
        - var_name: x1
          coefficient: 3
        - var_name: x2
          coefficient: -2
      sense: ">="
      rhs: -4
