tests/snapshots/test_from_file__oss_tests__model.snap
---
source: tests/test_from_file.rs
expression: result
---
constraints:
  "blah:":
    Standard:
      name: "blah:"
      coefficients:
        - coefficient: 1
          var_name: x
        - coefficient: -1
          var_name: y
      sense: "="
      rhs: 0
objectives:
  - coefficients:
      - coefficient: -1
        var_name: x
      - coefficient: -1
        var_name: y
    name: obj
problem_name: ~
problem_sense: Minimize
variables:
  x: General
  y:
    Bounded:
      - 0.2
      - 1
      - true
