tests/snapshots/test_from_file__oss_tests__obj_1cons_all_variables_with_bounds.snap
---
source: tests/test_from_file.rs
expression: result
---
constraints:
  "cons:":
    Standard:
      name: "cons:"
      coefficients:
        - coefficient: 4.4
          var_name: x
        - coefficient: 5.5
          var_name: y
        - coefficient: 6.6
          var_name: z
      sense: "<="
      rhs: 120
objectives:
  - coefficients:
      - coefficient: -2
        var_name: x
      - coefficient: -3
        var_name: y
      - coefficient: 4
        var_name: z
    name: cost
problem_name: ~
problem_sense: Maximize
variables:
  x: General
  y:
    Bounded:
      - 10
      - 12
      - false
  z: Binary
