tests/snapshots/test_from_file__oss_tests__obj_2cons_all_variable_types.snap
---
source: tests/test_from_file.rs
expression: result
---
constraints:
  "cons1:":
    Standard:
      name: "cons1:"
      coefficients:
        - coefficient: -199
          var_name: x
        - coefficient: 10
          var_name: y
        - coefficient: 1
          var_name: z
      sense: "<="
      rhs: 0
  "cons2:":
    Standard:
      name: "cons2:"
      coefficients:
        - coefficient: 1
          var_name: y
        - coefficient: 1
          var_name: z
      sense: ">="
      rhs: 0
objectives:
  - coefficients:
      - coefficient: -0.5
        var_name: x
      - coefficient: -2
        var_name: y
      - coefficient: -8
        var_name: z
    name: obj1
  - coefficients:
      - coefficient: 1
        var_name: y
      - coefficient: 1
        var_name: x
      - coefficient: 1
        var_name: z
    name: obj2
problem_name: ~
problem_sense: Minimize
variables:
  x: Binary
  y: General
  z: General
